--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,23 @@
-.chat-box {
-	outline: 1px solid black;
-	height: 200px;
-	width: 200px;
+.login_position {
+	margin: 0 auto;
+	border:2px solid green;
+	width: 40vw;
+	height: 40vh;
+}
+
+.messages {
+    width: 100%;
+    height: 50vh;
+}
+
+.iframes {
+	height: inherit;
+	width:inherit;
+}
+
+/*Css for the messages (all the classes are in the class USER)*/
+.border_messages {
+	border:1px solid black;
+	width: 50vw;
+	margin:0 auto;
 }
